@@ -9,7 +9,7 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -25,7 +25,7 @@ class RegexMatchingRegisteredServiceProxyPolicyTests {
         .defaultTypingEnabled(true).build().toObjectMapper();
 
     @Test
-    void verifySerializeARegexMatchingRegisteredServiceProxyPolicyToJson() throws Exception {
+    void verifySerializeARegexMatchingRegisteredServiceProxyPolicyToJson() throws Throwable {
         val policy = new RegexMatchingRegisteredServiceProxyPolicy();
         policy.setPattern("pattern");
         policy.setExactMatch(true);
@@ -36,27 +36,27 @@ class RegexMatchingRegisteredServiceProxyPolicyTests {
     }
 
     @Test
-    void verifyBadPattern() throws Exception {
+    void verifyBadPattern() throws Throwable {
         val policy = new RegexMatchingRegisteredServiceProxyPolicy();
         policy.setPattern("***");
         assertFalse(policy.isAllowedProxyCallbackUrl(RegisteredServiceTestUtils.getRegisteredService(),
-            new URL("https://github.com/apereo/cas")));
+            new URI("https://github.com/apereo/cas").toURL()));
     }
 
     @Test
-    void verifyExactMatch() throws Exception {
+    void verifyExactMatch() throws Throwable {
         val policy = new RegexMatchingRegisteredServiceProxyPolicy();
         policy.setPattern("https://github.com/apereo/cas");
         policy.setExactMatch(true);
         assertTrue(policy.isAllowedProxyCallbackUrl(RegisteredServiceTestUtils.getRegisteredService(),
-            new URL("https://github.com/apereo/cas")));
+            new URI("https://github.com/apereo/cas").toURL()));
     }
 
     @Test
-    void verifyServiceIdPattern() throws Exception {
+    void verifyServiceIdPattern() throws Throwable {
         val policy = new RegexMatchingRegisteredServiceProxyPolicy();
         policy.setUseServiceId(true);
         val registeredService = RegisteredServiceTestUtils.getRegisteredService("^https:.+/apereo/cas");
-        assertTrue(policy.isAllowedProxyCallbackUrl(registeredService, new URL("https://github.com/apereo/cas")));
+        assertTrue(policy.isAllowedProxyCallbackUrl(registeredService, new URI("https://github.com/apereo/cas").toURL()));
     }
 }
