@@ -76,7 +76,7 @@ import org.springframework.context.annotation.Lazy;
 import org.springframework.context.annotation.ScopedProxyMode;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -322,7 +322,7 @@ public class SamlIdPMetadataConfiguration {
         public SamlIdPCertificateAndKeyWriter samlSelfSignedCertificateWriter(
             final CasConfigurationProperties casProperties) throws Exception {
             val properties = casProperties.getAuthn().getSamlIdp().getMetadata().getCore();
-            val url = new URL(casProperties.getServer().getPrefix());
+            val url = new URI(casProperties.getServer().getPrefix());
             val generator = new DefaultSamlIdPCertificateAndKeyWriter(url.getHost());
             generator.setUriSubjectAltNames(CollectionUtils.wrap(url.getHost().concat("/idp/metadata")));
             properties.setCertificateAlgorithm(properties.getCertificateAlgorithm());
